Avoid whitespace between action buttons

--- a/app/assets/stylesheets/admin_framework_and_overrides.css.sass
+++ b/app/assets/stylesheets/admin_framework_and_overrides.css.sass
@@ -217,6 +217,8 @@ input
 table
   .actions .btn-group
     white-space: nowrap
+    letter-spacing: -0.31em
 
     .btn
+      letter-spacing: normal
       float: none
